RESOLVED FIXED247453
Assertion failure in RenderView::decrementRendersWithOutline
https://bugs.webkit.org/show_bug.cgi?id=247453
Summary Assertion failure in RenderView::decrementRendersWithOutline
Ryosuke Niwa
Reported 2022-11-03 12:52:09 PDT
e.g. ASSERTION FAILED: m_renderersWithOutlineCount > 0 rendering/RenderView.h(169) : void WebCore::RenderView::decrementRendersWithOutline() 1 0x7da64cde9 WTFCrash 2 0x7f04b18eb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x7f5427cab WebCore::RenderView::decrementRendersWithOutline() 4 0x7f5428cd7 WebCore::RenderElement::willBeDestroyed() 5 0x7f54eb609 WebCore::RenderLayerModelObject::willBeDestroyed() 6 0x7f5412905 WebCore::RenderBoxModelObject::willBeDestroyed() 7 0x7f5386b3b WebCore::RenderBox::willBeDestroyed() 8 0x7f53869d4 WebCore::RenderBlock::willBeDestroyed() 9 0x7f554ab75 WebCore::RenderObject::destroy() 10 0x7f554a9b9 WebCore::RenderObjectDeleter::operator()(WebCore::RenderObject*) const 11 0x7f53faeac std::__1::unique_ptr<WebCore::RenderElement, WebCore::RenderObjectDeleter>::reset(WebCore::RenderElement*) 12 0x7f53fae49 std::__1::unique_ptr<WebCore::RenderElement, WebCore::RenderObjectDeleter>::~unique_ptr() 13 0x7f5388cb5 std::__1::unique_ptr<WebCore::RenderElement, WebCore::RenderObjectDeleter>::~unique_ptr() 14 0x7f577c741 WebCore::RenderTreeUpdater::createRenderer(WebCore::Element&, WebCore::RenderStyle&&) 15 0x7f577b46d WebCore::RenderTreeUpdater::updateElementRenderer(WebCore::Element&, WebCore::Style::ElementUpdate const&) 16 0x7f577a942 WebCore::RenderTreeUpdater::updateRenderTree(WebCore::ContainerNode&) 17 0x7f577a1d0 WebCore::RenderTreeUpdater::commit(std::__1::unique_ptr<WebCore::Style::Update const, std::__1::default_delete<WebCore::Style::Update const> >) 18 0x7f3bc5f9b WebCore::Document::updateRenderTree(std::__1::unique_ptr<WebCore::Style::Update const, std::__1::default_delete<WebCore::Style::Update const> >) 19 0x7f3bc6690 WebCore::Document::resolveStyle(WebCore::Document::ResolveStyleType) 20 0x7f3bc7368 WebCore::Document::updateStyleIfNeeded() 21 0x7f3be3e36 WebCore::Document::finishedParsing() <rdar://99885221>
Attachments
Ryosuke Niwa
Comment 1 2022-11-03 12:54:57 PDT
EWS
Comment 2 2022-11-03 15:57:23 PDT
Committed 256297@main (4de7fdb96ff3): <https://commits.webkit.org/256297@main> Reviewed commits have been landed. Closing PR #6097 and removing active labels.
Ryosuke Niwa
Comment 3 2022-11-10 22:11:19 PST
Re-opening for pull request https://github.com/WebKit/WebKit/pull/6387
Note You need to log in before you can comment on or make changes to this bug.