Assertion failure in RenderView::decrementRendersWithOutline https://bugs.webkit.org/show_bug.cgi?id=247453

Reviewed by Simon Fraser.

The bug was caused by RenderElement::willBeDestroyed always calling decrementRendersWithOutline
regardless of whether the style had been initialized or not.

Only call decrementRendersWithOutline when the style had been initialized.

* LayoutTests/fast/css/outline-display-table-crash-expected.txt: Added.
* LayoutTests/fast/css/outline-display-table-crash.html: Added.
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::willBeDestroyed):

Canonical link: https://commits.webkit.org/256297@main